rajouter les modification