@@ -23,10 +23,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -56,12 +52,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- H2 Database (for tests) -->
-<!--		<dependency>-->
-<!--			<groupId>com.h2database</groupId>-->
-<!--			<artifactId>h2</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -84,8 +74,6 @@
 				<configuration>
 					<!-- Activer le chargement dynamique et le traçage des agents -->
 					<mainClass>com.safetynet.alerts.SafetyNetAlertsApplication</mainClass>
-
-<!--					<jvmArguments>-XX:+EnableDynamicAgentLoading -Djdk.instrument.traceUsage</jvmArguments>-->
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
